--- a/_columns/The_Big_Picture/zh-cn/2024-10-30.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-30.md
@@ -21,7 +21,7 @@ The Nasdaq composite fell nearly 0.6% in a day in which techs were the weakest s
 
 
 Software and internet stocks helped offset some tech losses. **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) pared its gain to 2.8% following a splendid third-quarter earnings report.  
-软件和互联网股票帮助抵消了一些科技股的损失。**Alphabet** （[GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)） 在发布出色的第三季度收益报告后将其涨幅削减至 2.8%。
+软件和互联网股票帮助抵消了一些科技股的损失。**Alphabet** （[GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)） 在公布出色的第三季度收益报告后，将其涨幅缩减至 2.8%。
 
 
 The S&P 500 reversed lower 0.3% and is practically back at the same spot it was a week ago. The Dow Jones Industrial Average lost 0.2% and closed near session lows for the third time in the past four sessions.  
@@ -32,72 +32,59 @@ Most of the selling occurred in afternoon trading. Declining stocks topped adva
 大部分抛售发生在下午交易中。纳斯达克下跌的股票以约 3-2 的比率领先于上涨的股票，但纽约证券交易所的赢家略高于输家。
 
 
-The IBD 50 index underperformed the stock market with a 0.8% drop. **Hims & Hers** ([HIMS](https://research.investors.com/quote.aspx?symbol=HIMS)) plunged more than 14%. The online provider of wellness products may have fallen in sympathy with **Eli Lilly** ([LLY](https://research.investors.com/quote.aspx?symbol=LLY)), whose [sales of weight-loss drugs missed expectations.](https://www.investors.com/news/technology/eli-lilly-stock-eli-lilly-earnings-diabetes-weight-loss-drugs/)  
-IBD 50指数表现逊于股市，下跌0.8%。**Hims & Hers** （[HIMS）](https://research.investors.com/quote.aspx?symbol=HIMS) 暴跌超过 14%。这家在线健康产品提供商可能已经对礼**来** （[LLY](https://research.investors.com/quote.aspx?symbol=LLY)） 表示同情，后者[的减肥药销售低于预期。](https://www.investors.com/news/technology/eli-lilly-stock-eli-lilly-earnings-diabetes-weight-loss-drugs/)
+The IBD 50 index underperformed the stock market with a 0.8% drop. **Hims & Hers** ([HIMS](https://research.investors.com/quote.aspx?symbol=HIMS)) plunged more than 14%. The online provider of wellness products may have fallen in sympathy with **Eli Lilly** ([LLY](https://research.investors.com/quote.aspx?symbol=LLY)), whose [sales of weight-loss drugs missed expectations.](https://www.investors.com/news/technology/eli-lilly-stock-eli-lilly-earnings-diabetes-weight-loss-drugs/)  
 
 
-After Wednesday's close, **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) and **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) were the latest Magnificent Seven companies to announce earnings. Microsoft beat profit expectations and shares rose about 1% in extended trading. But Meta fell more than 2%.  
-周三收盘后，**Microsoft** （[MSFT）](https://research.investors.com/quote.aspx?symbol=MSFT) 和 **Meta Platforms** （[META](https://research.investors.com/quote.aspx?symbol=META)） 是最新公布财报的 Magnificent Seven 公司。Microsoft 的利润超出预期，股价在延长交易中上涨约 1%。但 Meta 下跌超过 2%。
+After Wednesday's close, **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) and **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) were the latest Magnificent Seven companies to announce earnings. Microsoft beat profit expectations and shares rose about 1% in extended trading. But Meta fell more than 2%.  
 
 
-Stock Market Indexes Vary股票市场指数各不相同
------------------------------------
+Stock Market Indexes Vary
+-------------------------
 
 
-![](https://www.investors.com/wp-content/uploads/2024/10/MP103024-179x300.jpg)While the stock market has softened a bit, IBD continues to recommend 80%-100% exposure. The number of [distribution days](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) is manageable. The S&P 500, though, narrowly avoided a distribution day Wednesday as volume edged lower on the NYSE. Nasdaq volume fell more than 5%.  
-虽然股市略有疲软，但 IBD 继续建议 80%-100% 的风险敞口。[分发天数](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)是可控的。不过，标准普尔 500 指数勉强避开了周三的发行日，因为纽约证券交易所的成交量小幅走低。纳斯达克交易量下跌超过 5%。
+![](https://www.investors.com/wp-content/uploads/2024/10/MP103024-179x300.jpg)While the stock market has softened a bit, IBD continues to recommend 80%-100% exposure. The number of [distribution days](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) is manageable. The S&P 500, though, narrowly avoided a distribution day Wednesday as volume edged lower on the NYSE. Nasdaq volume fell more than 5%.  
 
 
-Each in its own way, the main indexes are crafting their own versions of the stock market uptrend.  
-每个主要指数都以自己的方式打造了自己版本的股市上升趋势。
+Each in its own way, the main indexes are crafting their own versions of the stock market uptrend.  
 
 
-The Nasdaq is the current leader, having notched a record high this week. Up 2.3% in October, the composite made a record high Wednesday but came short of a new closing high.  
-纳斯达克指数是目前的领导者，本周创下历史新高。该综合指数在 10 月份上涨 2.3%，周三创下历史新高，但未能创下收盘新高。
+The Nasdaq is the current leader, having notched a record high this week. Up 2.3% in October, the composite made a record high Wednesday but came short of a new closing high.  
 
 
-The communications services and technology sectors take much of the credit, up 2.7% and 1.7% this month. That's a welcome trend for the Nasdaq, which is [weighted about 56% in techs](https://www.nasdaq.com/articles/nasdaq-composite-benchmark-for-the-21st-century). More importantly, they are two of just four S&P sectors up in October, and Energy Select Sector SPDR ([XLE](https://research.investors.com/quote.aspx?symbol=XLE)) is barely 0.3% higher.  
-通信服务和科技行业占了大部分份额，本月分别上涨了 2.7% 和 1.7%。这对纳斯达克指数来说是一个可喜的趋势，纳斯达克指数[在科技股中的权重约为 56%。](https://www.nasdaq.com/articles/nasdaq-composite-benchmark-for-the-21st-century)更重要的是，它们是 10 月份标准普尔指数仅有的四个板块中的两个，能源精选板块 SPDR （[XLE](https://research.investors.com/quote.aspx?symbol=XLE)） 仅上涨 0.3%。
+The communications services and technology sectors take much of the credit, up 2.7% and 1.7% this month. That's a welcome trend for the Nasdaq, which is [weighted about 56% in techs](https://www.nasdaq.com/articles/nasdaq-composite-benchmark-for-the-21st-century). More importantly, they are two of just four S&P sectors up in October, and Energy Select Sector SPDR ([XLE](https://research.investors.com/quote.aspx?symbol=XLE)) is barely 0.3% higher.  
 
 
-The S&P 500 has been going sideways for two weeks. Yet, it is less than 1% from new highs and still holding above the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/).  
-标准普尔 500 指数已经横盘整理了两周。然而，它距离新高不到 1%，但仍保持在 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/)上方。
+The S&P 500 has been going sideways for two weeks. Yet, it is less than 1% from new highs and still holding above the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/).  
 
 
-The Dow is the only major index down for the month, about 2.6% off its prior high and testing the 42,000 level. It's been hit with weakness from some consumer components such as **Johnson & Johnson** ([JNJ](https://research.investors.com/quote.aspx?symbol=JNJ)), **Coca-Cola** ([KO](https://research.investors.com/quote.aspx?symbol=KO)), **Procter & Gamble** ([PG](https://research.investors.com/quote.aspx?symbol=PG)) and **McDonald's** ([MCD](https://research.investors.com/quote.aspx?symbol=MCD)).  
-道琼斯指数是本月唯一下跌的主要指数，较前高点下跌约 2.6%，并测试 42,000 点水平。它受到了一些消费者组成部分的打击，如**强生**（[JNJ](https://research.investors.com/quote.aspx?symbol=JNJ)）、**可口可乐**（[KO）、](https://research.investors.com/quote.aspx?symbol=KO)**宝洁**（[PG）](https://research.investors.com/quote.aspx?symbol=PG)和**麦当劳**（[MCD](https://research.investors.com/quote.aspx?symbol=MCD)）。
+The Dow is the only major index down for the month, about 2.6% off its prior high and testing the 42,000 level. It's been hit with weakness from some consumer components such as **Johnson & Johnson** ([JNJ](https://research.investors.com/quote.aspx?symbol=JNJ)), **Coca-Cola** ([KO](https://research.investors.com/quote.aspx?symbol=KO)), **Procter & Gamble** ([PG](https://research.investors.com/quote.aspx?symbol=PG)) and **McDonald's** ([MCD](https://research.investors.com/quote.aspx?symbol=MCD)).  
 
 
-On Wednesday, **Caterpillar** ([CAT](https://research.investors.com/quote.aspx?symbol=CAT)) cost the Dow 54 of its 91-point drop. **Honeywell** ([HON](https://research.investors.com/quote.aspx?symbol=HON)) is another industrial stock hurting the Dow.  
-周三，**卡特彼**勒 （[CAT）](https://research.investors.com/quote.aspx?symbol=CAT) 使道琼斯指数下跌 91 点中的 54 点。**霍尼韦尔** （[HON](https://research.investors.com/quote.aspx?symbol=HON)） 是另一只损害道琼斯指数的工业股。
+On Wednesday, **Caterpillar** ([CAT](https://research.investors.com/quote.aspx?symbol=CAT)) cost the Dow 54 of its 91-point drop. **Honeywell** ([HON](https://research.investors.com/quote.aspx?symbol=HON)) is another industrial stock hurting the Dow.  
 
 
-In small caps, the Russell 2000 continues to be the most volatile. It is rebounding from a pullback to the 50-day moving average and nearing another test of resistance around 2,300.  
-在小盘股中，罗素 2000 指数仍然是波动最大的。它正在从回调至 50 天移动平均线反弹，并接近 2,300 附近的另一次阻力测试。
+In small caps, the Russell 2000 continues to be the most volatile. It is rebounding from a pullback to the 50-day moving average and nearing another test of resistance around 2,300.  
 
 
-Stock Market Digests GDP And Jobs Data股市摘要 GDP 和就业数据
-----------------------------------------------------
+Stock Market Digests GDP And Jobs Data
+--------------------------------------
 
 
-The 10-year Treasury yield was nearly flat at 4.26% vs. Tuesday afternoon quotes. The yield erased a morning drop that greeted economic data.  
-10 年期美国国债收益率与周二下午的报价几乎持平，为 4.26%。收益率抹去了早盘迎接经济数据的下跌。
+The 10-year Treasury yield was nearly flat at 4.26% vs. Tuesday afternoon quotes. The yield erased a morning drop that greeted economic data.  
 
 
-In the first measurement of third-quarter gross domestic product, the U.S. economy rose 2.8%. That's slightly slower than the 3% increase in Q2 and below economists' consensus forecast.  
-在第三季度国内生产总值（GDP）的首次衡量中，美国经济增长了2.8%。这略低于第二季度 3% 的增幅，也低于经济学家的普遍预测。
+In the first measurement of third-quarter gross domestic product, the U.S. economy rose 2.8%. That's slightly slower than the 3% increase in Q2 and below economists' consensus forecast.  
 
 
-The ADP National Employment Report showed a better-than-expected increase of 233,000 jobs in October, up from 143,000 in September.  
-ADP 全国就业报告显示，10 月份增加了 233,000 个工作岗位，高于 9 月份的 143,000 个，好于预期。
+The ADP National Employment Report showed a better-than-expected increase of 233,000 jobs in October, up from 143,000 in September.  
 
 
 "This makes two consecutive quarters now of well-above potential GDP growth for the U.S. economy, built on a solid foundation of accelerating real consumer spending and government spending growth, and steady nonresidential fixed investment," Scott Anderson, chief U.S. economist at BMO Capital Markets, said in a report. "Volatile quarterly trade flows and inventory changes will largely be ignored by the Federal Reserve."  
-BMO Capital Markets 首席美国经济学家 Scott Anderson 在一份报告中表示：“这使得美国经济连续两个季度的 GDP 增长远高于潜在 GDP 增长，建立在加速实际消费支出和政府支出增长以及稳定的非住宅固定投资的坚实基础之上。“波动的季度贸易流量和库存变化在很大程度上将被美联储忽视。”
+BMO Capital Markets 首席美国经济学家斯科特·安德森 （Scott Anderson） 在一份报告中表示：“这使得美国经济连续两个季度的 GDP 增长远高于潜在 GDP 增长，这是建立在加速实际消费支出和政府支出增长以及稳定的非住宅固定投资的坚实基础之上的。”美联储将在很大程度上忽视波动的季度贸易流量和库存变化。”
 
 
 Anderson also noted a positive trend in inflation, with the GDP price index slowing to a 1.8% annualized rate in Q3 from 2.5% in the second quarter. Other inflation gauges also eased.  
-Anderson 还指出，通货膨胀呈积极趋势，GDP 价格指数年化率从第二季度的 2.5% 放缓至第三季度的 1.8%。其他通胀指标也有所缓解。
+Anderson 还指出，通胀呈积极趋势，GDP 价格指数年化率从第二季度的 2.5% 放缓至第三季度的 1.8%。其他通胀指标也有所缓解。
 
 
 [View General Market Indicator charts page here.  
@@ -124,7 +111,7 @@ IBD Live：与专业人士一起学习和分析成长型股票](https://shop.inv
 
 
 [Futures: Two Titans Beat Views Late; Robinhood Dives, Crypto Plays Skid  
-期货：Two Titans 在晚些时候击败 Views;Robinhood 跳水，加密货币玩滑](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-microsoft-meta-earnings-robinhood-bitcoin-plays/)
+期货：Two Titans 晚些时候击败 Views;Robinhood 跳水，Crypto 玩滑](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-microsoft-meta-earnings-robinhood-bitcoin-plays/)
 
 
 
