--- a/_columns/The_Big_Picture/zh-cn/2024-11-05.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-05.md
@@ -44,7 +44,7 @@ The Dow Jones jumped above its 50-day line and reclaimed the 42,000 level. The N
 
 
 Breadth was strong and improved as the session wore on, with advancing stocks beating decliners on the Nasdaq by nearly 3-to-1. Over on the NYSE, winners beat losers by nearly 5-to-1. The Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)), one of the better gauges of breadth on the NYSE, jumped 1.2% and reclaimed its 50-day moving average after three straight closes below the line.  
-随着交易日的进行，广度强劲且有所改善，上涨的股票以近 3 比 1 的优势击败纳斯达克下跌的股票。在纽约证券交易所，赢家以近 5 比 1 击败输家。Invesco S&P 500 Equal Weight ETF （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 是纽约证券交易所衡量广度的较好指标之一，上涨 1.2% 并在连续三个收盘低于该线后收复其 50 天移动均线。
+随着交易日的进行，广度强劲且有所改善，上涨的股票以近 3 比 1 的优势击败纳斯达克下跌的股票。在纽约证券交易所，赢家以近 5 比 1 击败输家。Invesco S&P 500 Equal Weight ETF （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 是纽约证券交易所衡量广度的较好指标之一，上涨 1.2% 并在连续三个收盘低于该线后收复 50 天移动均线。
 
 
 
