--- a/_columns/Swing_Trading/zh-cn/2024-11-01.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-01.md
@@ -22,7 +22,7 @@ Advantage Of Pullback Over Breakout回调优于突破的优势
 
 
 Want to improve your sell decisions? One of the best things you can do is improve your buy decisions. In this market environment, we've been favoring pullbacks over breakouts. But we like to wait for the strength to come back in before we make our purchase.  
-想要改善您的销售决策？您可以做的最好的事情之一就是改善您的购买决策。在这种市场环境中，我们一直看好回调而不是突破。但是我们喜欢等待力量恢复后再进行购买。
+想改善您的卖出决策吗？您可以做的最好的事情之一就是改善您的买入决策。在这种市场环境中，我们一直倾向于回调而不是突破。但我们喜欢等待力量恢复后再进行购买。
 
 
 With Clear Secure, our entry on [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) came after the stock retook its [21-day line](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) **(1)**. YOU stock cleared the highs of the previous four days, including the day it dipped below the 21-day. We started with a half position and then as it cleared resistance around 33, we added to the position **(2)**.  
@@ -44,7 +44,7 @@ With Clear Secure, our entry on [SwingTrader](http://shop.investors.com/offer/sp
 
 
 The entry decision gives you two advantages. First, if the stock went back below the 21-day line and didn't follow through on the strength, you would know quickly the trade wasn't working. The exit would take a smaller hit to the portfolio as you could keep a tight stop and the position size was smaller.  
-进入决定为您提供两个优势。首先，如果股票回到 21 天线下方并且没有跟进强势，您很快就会知道交易没有奏效。退出对投资组合的打击较小，因为您可以保持严格的止损并且头寸规模较小。
+入场决定为您带来两个优势。首先，如果股票回到 21 天线下方并且没有跟进强势，您很快就会知道交易不起作用。退出将对投资组合造成较小的打击，因为您可以保持严格的止损并且头寸规模较小。
 
 
 Second, by the time the breakout across resistance occurs, you already have a little cushion. The add is smaller so it doesn't move your average cost up too much and keeps your cushion intact. The larger position in stocks that are working allows you to make a bigger difference in your portfolio when you're right on your buy decision.  
@@ -56,42 +56,35 @@ Selling Decisions For Clear Secure StockClear Secure Stock 的出售决策
 
 
 When making sell decisions, it's wise to ditch the idea that you will sell at the top. That's rare.  
-在做出出售决定时，明智的做法是放弃您将在顶部出售的想法。这种情况很少见。
+在做出卖出决定时，明智的做法是放弃您将在顶部卖出的想法。这种情况很少见。
 
 
-For Clear Secure, we started trimming on a strong gain after the stock had run up 7% from our initial entry **(3)**. With a portion of profit locked in, you can let the stock wiggle a little more and still exit with a positive trade.  
-对于 Clear Secure，在股价从最初的入场价 **（3）** 上涨 7% 后，我们开始削减强劲的收益。锁定部分利润后，您可以让股票多波动一点，并且仍然以积极的交易退出。
+For Clear Secure, we started trimming on a strong gain after the stock had run up 7% from our initial entry **(3)**. With a portion of profit locked in, you can let the stock wiggle a little more and still exit with a positive trade.  
 
 
-With the benefit of hindsight, the trim doesn't look great since Clear Secure jumped again the next day **(4)**. But by making incremental decisions, the market gives you feedback. Was it a bad sell and the stock goes up more? Well, at least you still have some participation. Does it go down after you sell? Well, do more of that selling since the market gave you feedback that it was a good decision. You can also continually move your stop up so that if you do come off the top quickly, you reduce the drawdown.  
-事后看来，自从 Clear Secure 第二天再次跳跃 **（4）** 以来，修剪看起来并不好。但是通过做出渐进式决策，市场会给你反馈。这是一次糟糕的抛售，股票上涨得更多吗？好吧，至少你还有一些参与。卖完后会下跌吗？好吧，多做一些销售，因为市场给你的反馈是一个不错的决定。您还可以不断向上移动止损，这样如果您确实快速从顶部出来，您可以减少回撤。
+With the benefit of hindsight, the trim doesn't look great since Clear Secure jumped again the next day **(4)**. But by making incremental decisions, the market gives you feedback. Was it a bad sell and the stock goes up more? Well, at least you still have some participation. Does it go down after you sell? Well, do more of that selling since the market gave you feedback that it was a good decision. You can also continually move your stop up so that if you do come off the top quickly, you reduce the drawdown.  
 
 
-After showing some stalling action the next day **(5)**, we made our final exit on Clear Secure at a higher price than our initial trim **(6)**. Part of the decision came down the stock being down sharply on a day where the indexes were up and near highs.  
-在第二天表现出一些停滞动作 **（5）** 后，我们以高于初始修剪 **（6）** 的价格在 Clear Secure 上进行了最终退出。部分决定是下跌的，股票在指数上涨并接近高点的当天大幅下跌。
+After showing some stalling action the next day **(5)**, we made our final exit on Clear Secure at a higher price than our initial trim **(6)**. Part of the decision came down the stock being down sharply on a day where the indexes were up and near highs.  
 
 
-Sitting Out While A Stock Consolidates在股票整合时袖手旁观
-------------------------------------------------
+Sitting Out While A Stock Consolidates
+--------------------------------------
 
 
-Pullbacks are great for entries but not as much fun to sit in. Our exit allowed us to watch Clear Secure pull back below the 10-day line without taking the hit to the portfolio **(7)**. Most likely holding it longer would have just created an exit at a worse price and a bigger drawdown. With YOU stock running into resistance at its old high **(8)**, we can watch this one from the sidelines until we see another opportunity.  
-回调非常适合入场，但坐着没有那么有趣。我们的退出使我们能够看到 Clear Secure 回调至 10 天线以下，而不会对投资组合造成打击 **（7）。**很可能持有更长时间只会以更糟糕的价格和更大的回撤退出。随着 YOU 股票在旧高点 **（8）** 遇到阻力，我们可以在场边观察这只股票，直到我们看到另一个机会。
+Pullbacks are great for entries but not as much fun to sit in. Our exit allowed us to watch Clear Secure pull back below the 10-day line without taking the hit to the portfolio **(7)**. Most likely holding it longer would have just created an exit at a worse price and a bigger drawdown. With YOU stock running into resistance at its old high **(8)**, we can watch this one from the sidelines until we see another opportunity.  
 
 
-That's especially attractive to be on the bench as [earnings](https://www.investors.com/research/earnings-calendar-analyst-estimates-stocks-to-watch/) and the election are around the corner in less than a week. Two events that could add extra volatility to stock positions.  
-坐在替补席上特别有吸引力，因为在不到一周的时间里，[财报](https://www.investors.com/research/earnings-calendar-analyst-estimates-stocks-to-watch/)和选举就要来了。这两个事件可能会增加股票头寸的额外波动性。
+That's especially attractive to be on the bench as [earnings](https://www.investors.com/research/earnings-calendar-analyst-estimates-stocks-to-watch/) and the election are around the corner in less than a week. Two events that could add extra volatility to stock positions.  
 
 
-*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).  
-SwingTrader 的订阅者和试用者可以访问有关过去交易的更多详细信息。提供[免费试用](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)。在 X 上关注尼尔森，前身为 Twitter，网址为 [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen)。*
+*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).* 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.  
-想知道我们的波段交易策略吗？观看此每周更新。](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
+[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1) 
 
 
 [Mark Minervini Has This Counter-Intuitive Advice For Volatile Markets  
