--- a/_columns/The_Big_Picture/zh-cn/2024-10-31.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-31.md
@@ -29,7 +29,7 @@ In the regular session, the Dow Jones Industrial Average declined 0.9% and close
 
 
 The S&P 500 lost 1.9% and the Nasdaq composite tumbled 2.8%. For both, it was the biggest loss since Sept. 3, according to Dow Jones Market Data. And the small-cap Russell 2000 index dropped 1.6%.  
-标准普尔 500 指数下跌 1.9%，纳斯达克综合指数下跌 2.8%。根据道琼斯市场数据，这两者都是自 9 月 3 日以来的最大损失。小盘股罗素 2000 指数下跌 1.6%。
+标准普尔 500 指数下跌 1.9%，纳斯达克综合指数下跌 2.8%。根据道琼斯市场数据，这两者都是自 9 月 3 日以来的最大跌幅。小盘股罗素 2000 指数下跌 1.6%。
 
 
 Volume fell on the Nasdaq, but rose on the New York Stock Exchange from Wednesday's session. That added a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) to the S&P 500, taking its count to four. Declining stocks topped advancers by about 3-1 on the Nasdaq and by 2-1 on the NYSE, according to FactSet.  
@@ -41,7 +41,7 @@ Nine of the 11 S&P 500 sectors ended lower, with technology and consumer discret
 
 
 On the [economic front](https://www.investors.com/news/economy/pce-inflation-sept-jobless-claims-eci-federal-reserve-sp-500/), the core PCE price index ran a touch too hot in September, as the inflation gauge remained moderately above the Federal Reserve's target amid robust consumer spending. However, the Employment Cost Index, a measure of wage growth, unexpectedly slowed in Q3.  
-经济[方面](https://www.investors.com/news/economy/pce-inflation-sept-jobless-claims-eci-federal-reserve-sp-500/)，核心 PCE 价格指数在 9 月份表现得有点过热，因为在强劲的消费者支出中，通胀指标仍略高于美联储的目标。然而，衡量工资增长的就业成本指数在第三季度出人意料地放缓。
+经济[方面](https://www.investors.com/news/economy/pce-inflation-sept-jobless-claims-eci-federal-reserve-sp-500/)，核心 PCE 价格指数在 9 月份表现得有点太火了，因为在消费者支出强劲的情况下，通胀指标仍略高于美联储的目标。然而，衡量工资增长的就业成本指数在第三季度出人意料地放缓。
 
 
 Meanwhile, the Labor Department reported that initial jobless claims unexpectedly fell in the week ended Oct. 26, reflecting a low level of layoffs.  
@@ -70,40 +70,32 @@ Stock Market Today: Meta, Microsoft今日股市：Meta、Microsoft
 ------------------------------------------------------
 
 
-[Shares of Meta Platforms](https://www.investors.com/news/technology/meta-stock-q3-2024-earnings-results-facebook-instagram/) sold off more than 4% Thursday after the company reported third quarter earnings above expectations, powered by a 19% revenue increase. But Chief Executive Mark Zuckerberg pledged to keep up the company's big spending on artificial intelligence and the metaverse.  
-[Meta Platforms 的股价](https://www.investors.com/news/technology/meta-stock-q3-2024-earnings-results-facebook-instagram/)周四下跌超过 4%，此前该公司公布第三季度收益高于预期，这得益于 19% 的收入增长。但首席执行官马克扎克伯格承诺将继续公司在人工智能和元宇宙方面的大笔支出。
+[Shares of Meta Platforms](https://www.investors.com/news/technology/meta-stock-q3-2024-earnings-results-facebook-instagram/) sold off more than 4% Thursday after the company reported third quarter earnings above expectations, powered by a 19% revenue increase. But Chief Executive Mark Zuckerberg pledged to keep up the company's big spending on artificial intelligence and the metaverse.  
 
 
-Meta stock remains above its 50-day line.  
-Meta 股票仍高于其 50 日线。
+Meta stock remains above its 50-day line.  
 
 
-Meanwhile, [Microsoft topped Wall Street's targets](https://www.investors.com/news/technology/microsoft-stock-msft-fiscal-q1-2025-earnings/) for the software giant's fiscal first quarter on strong cloud computing business. However, Microsoft stock tumbled 6% after the company guided below views for sales in the current quarter. Microsoft shares dived below their 50-day line.  
-与此同时，Microsoft 凭借强劲的云计算业务[，超过了华尔街对](https://www.investors.com/news/technology/microsoft-stock-msft-fiscal-q1-2025-earnings/)这家软件巨头第一财季的目标。然而，Microsoft 股价下跌 6%，此前该公司对本季度的销售观点指引如下。Microsoft 股价跌破 50 日线。
+Meanwhile, [Microsoft topped Wall Street's targets](https://www.investors.com/news/technology/microsoft-stock-msft-fiscal-q1-2025-earnings/) for the software giant's fiscal first quarter on strong cloud computing business. However, Microsoft stock tumbled 6% after the company guided below views for sales in the current quarter. Microsoft shares dived below their 50-day line.  
 
 
-The two stocks account for about 9% of the S&P 500 index.  
-这两只股票约占标准普尔 500 指数的 9%。
+The two stocks account for about 9% of the S&P 500 index.  
 
 
-Dow Jones Winners And Losers道琼斯赢家和输家
-------------------------------------
+Dow Jones Winners And Losers
+----------------------------
 
 
-In the Dow Jones index, **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) and **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) were the among biggest decliners Thursday with losses of 3.5% and 3.2%, respectively, on the stock market today. Intel jumped on [earnings late Thursday](https://www.investors.com/news/technology/intel-stock-intc-q3-2024-earnings/).  
-在道琼斯指数中，**英特尔** （[INTC](https://research.investors.com/quote.aspx?symbol=INTC)） 和**波音** （[BA）](https://research.investors.com/quote.aspx?symbol=BA) 是周四跌幅最大的股票之一，今天股市分别下跌 3.5% 和 3.2%。英特尔[周四晚些时候财报](https://www.investors.com/news/technology/intel-stock-intc-q3-2024-earnings/)上涨。
+In the Dow Jones index, **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) and **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) were the among biggest decliners Thursday with losses of 3.5% and 3.2%, respectively, on the stock market today. Intel jumped on [earnings late Thursday](https://www.investors.com/news/technology/intel-stock-intc-q3-2024-earnings/).  
 
 
-On the upside, **Verizon Communications** ([VZ](https://research.investors.com/quote.aspx?symbol=VZ)) and **Amgen** ([AMGN](https://research.investors.com/quote.aspx?symbol=AMGN)) were the Dow winners during the session, up 2.1% and 1.5%, respectively. Amgen reported [Q3 results](https://www.investors.com/news/technology/amgen-stock-amgen-earnings-q3-2024/) Wednesday evening.  
-从好的方面来看，**Verizon Communications** （[VZ](https://research.investors.com/quote.aspx?symbol=VZ)） 和**安进** （[AMGN）](https://research.investors.com/quote.aspx?symbol=AMGN) 是道琼斯指数的赢家，分别上涨 2.1% 和 1.5%。安进周三晚间公布了[第三季度业绩](https://www.investors.com/news/technology/amgen-stock-amgen-earnings-q3-2024/)。
+On the upside, **Verizon Communications** ([VZ](https://research.investors.com/quote.aspx?symbol=VZ)) and **Amgen** ([AMGN](https://research.investors.com/quote.aspx?symbol=AMGN)) were the Dow winners during the session, up 2.1% and 1.5%, respectively. Amgen reported [Q3 results](https://www.investors.com/news/technology/amgen-stock-amgen-earnings-q3-2024/) Wednesday evening.  
 
 
-[The Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended sharply lower as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) tumbled 3.9%. Notably, **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) is close to triggering the 7% sell rule from a 264.86 buy point after a short-lived breakout move last week.  
-[Magnificent Seven 股票](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/)收盘大幅走低，Roundhill Magnificent Seven ETF （[MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)） 下跌 3.9%。值得注意的是，**特斯拉** （[TSLA）](https://research.investors.com/quote.aspx?symbol=TSLA) 在上周短暂的突破后，接近从 264.86 的买入点触发 7% 的卖出规则。
+[The Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended sharply lower as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) tumbled 3.9%. Notably, **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) is close to triggering the 7% sell rule from a 264.86 buy point after a short-lived breakout move last week.  
 
 
-And the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund slipped 1.7%. In the [IBD 50](https://research.investors.com/stock-lists/ibd-50/) list, **Reddit** ([RDDT](https://research.investors.com/quote.aspx?symbol=RDDT)) rallied another 2.8%, adding to Wednesday's 42% earnings-fueled surge.  
-Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 交易所交易基金下跌 1.7%。在 [IBD 50](https://research.investors.com/stock-lists/ibd-50/) 榜单中，**Reddit** （[RDDT）](https://research.investors.com/quote.aspx?symbol=RDDT) 又上涨了 2.8%，增加了周三 42% 的收益推动飙升。
+And the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund slipped 1.7%. In the [IBD 50](https://research.investors.com/stock-lists/ibd-50/) list, **Reddit** ([RDDT](https://research.investors.com/quote.aspx?symbol=RDDT)) rallied another 2.8%, adding to Wednesday's 42% earnings-fueled surge.  
 
 
 
@@ -111,8 +103,7 @@ Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=F
 ---
 
 
-[**Nvidia Still King, But This 'Big Daddy' Crushes All Other Mag 7 Stocks  
-Nvidia 仍然是王者，但这个“Big Daddy”碾压了所有其他 Mag 7 股票**](https://www.investors.com/research/ibd-stock-analysis/godaddy-gddy-nvidia-meta-microsoft/)
+[**Nvidia Still King, But This 'Big Daddy' Crushes All Other Mag 7 Stocks**](https://www.investors.com/research/ibd-stock-analysis/godaddy-gddy-nvidia-meta-microsoft/) 
 
 
 
@@ -120,8 +111,8 @@ Nvidia 仍然是王者，但这个“Big Daddy”碾压了所有其他 Mag 7 股
 ---
 
 
-What To Do Now 现在该做什么
----------------------
+What To Do Now
+--------------
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/10/MP103124-250x300.jpg)
@@ -132,15 +123,15 @@ Following Thursday's sharp losses, IBD reduced its recommended exposure from 80%
 
 
 The S&P 500 fell to its 50-day moving average and the Nasdaq is close to testing its 50-day line. Those levels will be critical junctures to watch. Further weakness below those levels would indicate the need to more aggressively cut market exposure.  
-标准普尔 500 指数跌至 50 天移动平均线，纳斯达克指数接近测试其 50 天移动平均线。这些水平将是值得关注的关键时刻。进一步低于这些水平表明需要更积极地减少市场敞口。
+标准普尔 500 指数跌至 50 天移动平均线，纳斯达克指数接近测试其 50 天移动平均线。这些水平将是值得关注的关键时刻。低于这些水平的进一步疲软表明需要更积极地减少市场敞口。
 
 
 The volatile stock market environment requires diligent [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means incrementally adding and reducing exposure to stay in sync with the broad market. Watch for sell signals and other abrupt character changes in your holdings. For example, **SharkNinja** ([SN](https://research.investors.com/quote.aspx?symbol=SN)) [plunged nearly 17%](https://www.investors.com/news/technology/sharkninja-stock-sn-q3-2024-earnings/) to break down below the 50-day line, causing a sell signal.  
-动荡的股市环境需要勤奋的[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。这意味着逐步增加和减少风险敞口，以与大盘保持同步。观察您持有的资产中的卖出信号和其他突然的特征变化。例如，**SharkNinja** （[SN](https://research.investors.com/quote.aspx?symbol=SN)） [暴跌近 17%](https://www.investors.com/news/technology/sharkninja-stock-sn-q3-2024-earnings/) 跌破 50 天线，引发卖出信号。
+动荡的股市环境需要勤奋的[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法论的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。这意味着逐步增加和减少风险敞口，以与大盘保持同步。注意您持有的资产中的卖出信号和其他突然的特征变化。例如，**SharkNinja** （[SN）](https://research.investors.com/quote.aspx?symbol=SN) [暴跌近 17%](https://www.investors.com/news/technology/sharkninja-stock-sn-q3-2024-earnings/) 跌破 50 天线，引发卖出信号。
 
 
 [IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured two stocks, both of which reported earnings. **GoDaddy** ([GDDY](https://research.investors.com/quote.aspx?symbol=GDDY)) crossed above a 166.17 [cup-with-handle entry](https://www.investors.com/research/ibd-stock-analysis/godaddy-gddy-nvidia-meta-microsoft/). Meanwhile, there are four ideas appearing on MarketSurge's Near Pivot list. That suggests a dwindling number of buying opportunities ready to emerge.  
-[IBD MarketSurge 的](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)Breaking Out Today 名单包含两只股票，两只股票均报告了收益。**GoDaddy** （[GDDY）](https://research.investors.com/quote.aspx?symbol=GDDY) 突破 166.17 [带手柄杯。](https://www.investors.com/research/ibd-stock-analysis/godaddy-gddy-nvidia-meta-microsoft/)同时，MarketSurge 的 Near Pivot 列表中出现了四个想法。这表明准备出现的买入机会正在减少。
+[IBD MarketSurge 的](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)Breaking Out Today 名单包含两只股票，两只股票均报告了收益。**GoDaddy** （[GDDY）](https://research.investors.com/quote.aspx?symbol=GDDY) 突破 166.17 带[手柄杯的入场点](https://www.investors.com/research/ibd-stock-analysis/godaddy-gddy-nvidia-meta-microsoft/)。与此同时，MarketSurge 的 Near Pivot 列表中出现了四个想法。这表明准备出现的购买机会正在减少。
 
 
 
@@ -171,7 +162,7 @@ Ferrari shares are pulling back to their 50-day line, as they build a flat base 
 
 
 Robotic surgery leader Intuitive Surgical gapped up from its 50-day and 10-week lines following the company's third-quarter report on Oct. 18. Shares are pulling back just above a tight area that formed a quasi flat base. Investors can use an Oct. 25 high of 516.89 as an entry.  
-机器人手术领导者 Intuitive Surgical 在 10 月 18 日发布第三季度报告后，从其 50 天和 10 周的产品线中脱颖而出。股价正在回落至形成准平坦底部的狭窄区域上方。投资者可以使用 10 月 25 日的高点 516.89 作为入场点。
+机器人手术领导者 Intuitive Surgical 在 10 月 18 日发布第三季度报告后，从其 50 天和 10 周的产品线中跳空上涨。股价正在回落至形成准平坦底部的狭窄区域上方。投资者可以使用 10 月 25 日的高点 516.89 作为入场点。
 
 
 And Brazilian financial leader Nu fell below a 15.16 buy point following Monday's breakout.  
@@ -195,20 +186,16 @@ And Brazilian financial leader Nu fell below a 15.16 buy point following Monday'
 查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones  
-在今天的股市和道琼斯值得购买和关注的顶级成长股](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/) 
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/) 
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen) 
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
-使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 
 
 
 
