--- a/_columns/The_Big_Picture/zh-cn/2024-11-04.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-04.md
@@ -17,7 +17,7 @@ Dull. Mixed. Wishy-washy. Confusing. Slightly more skittish than usual. These wo
 
 
 And who could blame Wall Street? Monday's apathetic moves, both on the upside and downside, reflected a lack of confidence in what the result will be in Tuesday's historic U.S. presidential election.  
-谁能责怪华尔街呢？周一的上行和下行走势都无动于衷，反映出人们对周二历史性美国总统大选的结果缺乏信心。
+谁又能责怪华尔街呢？周一的上行和下行都无动于衷，反映出人们对周二历史性的美国总统大选的结果缺乏信心。
 
 
 Of course, there's more at stake than the possibility of a first woman president or the return of a former president to the White House.  
@@ -46,154 +46,127 @@ The S&P 500 and the Nasdaq briefly spent time on Monday in positive territory, y
 
 
 One could argue that skittishness extended into the bond markets too. Investors scooped up long-dated U.S. Treasuries. Thus, the yield on the benchmark 10-year government bond sank five basis points to 4.30%. It had fallen to as low as 4.26%.  
-有人可能会说，这种不安情绪也延伸到了债券市场。投资者买入长期美国国债。因此，基准 10 年期政府债券的收益率下跌 5 个基点至 4.30%。它已跌至 4.26% 的低点。
+有人可能会说，不安情绪也延伸到了债券市场。投资者大量买入长期美国国债。因此，基准 10 年期政府债券的收益率下跌 5 个基点至 4.30%。它已跌至 4.26% 的低点。
 
 
 Nonetheless, long-dated Treasuries actually show a losing year so far. The 10-year yield started in 2024 at 3.86%. On Thursday, the Federal Reserve is widely expected to conduct its second rate cut this year.  
-尽管如此，长期国债实际上到目前为止显示出亏损的一年。10 年期收益率从 2024 年开始为 3.86%。周四，市场普遍预计美联储将进行今年的第二次降息。
+尽管如此，长期美国国债实际上显示出迄今为止的亏损。10 年期国债收益率从 2024 年开始为 3.86%。周四，市场普遍预计美联储将进行今年的第二次降息。
 
 
-A Key Technical Level A 关键技术水平
-------------------------------
+A Key Technical Level
+---------------------
 
 
-Monday's action also highlighted a test of support at the S&P 500's rising 50-day moving average. In fact, this week could mark the third time in which the S&P 500 falls below its 50-day line in the second half of the year. In the first half, the index tested buyers at or near the 50-day line just once, over a three-week time span from April 15 through May 3.  
-周一的行动还凸显了对标准普尔 500 指数上升 50 天移动平均线的支撑测试。事实上，本周可能标志着标准普尔 500 指数在今年下半年第三次跌破其 50 日线。在上半年，该指数在 4 月 15 日至 5 月 3 日的三周时间内，仅对位于 50 日线或附近位置的买家进行了一次测试。
+Monday's action also highlighted a test of support at the S&P 500's rising 50-day moving average. In fact, this week could mark the third time in which the S&P 500 falls below its 50-day line in the second half of the year. In the first half, the index tested buyers at or near the 50-day line just once, over a three-week time span from April 15 through May 3.  
 
 
-The Dow Jones Industrial Average lost the most among the major stock market indexes, down 0.6%. Perhaps surprising some investors, blue chips in the banking and financial sectors led the downside. **JPMorgan Chase** ([JPM](https://research.investors.com/quote.aspx?symbol=JPM)) and **Travelers** ([TRV](https://research.investors.com/quote.aspx?symbol=TRV)) in the Dow Jones both dropped more than 1%. Both components also took out their 21-day lines.  
-道琼斯工业平均指数在主要股市指数中跌幅最大，下跌 0.6%。也许让一些投资者感到惊讶的是，银行和金融行业的蓝筹股领跌。道琼斯指数的**摩根大通** （[JPM](https://research.investors.com/quote.aspx?symbol=JPM)） 和**旅行者** （[TRV](https://research.investors.com/quote.aspx?symbol=TRV)） 均下跌超过 1%。这两个组件也都取消了他们的 21 天线。
+The Dow Jones Industrial Average lost the most among the major stock market indexes, down 0.6%. Perhaps surprising some investors, blue chips in the banking and financial sectors led the downside. **JPMorgan Chase** ([JPM](https://research.investors.com/quote.aspx?symbol=JPM)) and **Travelers** ([TRV](https://research.investors.com/quote.aspx?symbol=TRV)) in the Dow Jones both dropped more than 1%. Both components also took out their 21-day lines.  
 
 
-Amid these declines, it was somewhat puzzling to see smaller issues actually thrive on Monday. The Russell 2000 gained 0.5%, while the S&P MidCap 400 eked out a 0.3% rise.  
-在这些下跌中，看到较小的发行量在周一居然蓬勃发展，这有点令人费解。罗素 2000 指数上涨 0.5%，而标准普尔中型股 400 指数上涨 0.3%。
+Amid these declines, it was somewhat puzzling to see smaller issues actually thrive on Monday. The Russell 2000 gained 0.5%, while the S&P MidCap 400 eked out a 0.3% rise.  
 
 
-Did oil and gas and other energy companies help the cause? Perhaps so. Some industrial and cyclical firms also shined brightly. Looking at IBD's industry groups, solar, oil machinery, oil drilling, oil and gas field services, building maintenance and agricultural chemical stocks jumped 2.4% or more for the day.  
-石油和天然气以及其他能源公司是否帮助了这项事业？也许是这样。一些工业和周期性企业也大放异彩。从 IBD 的行业组来看，太阳能、石油机械、石油钻探、石油和天然气田服务、建筑维护和农用化学品股当天上涨 2.4% 或更多。
+Did oil and gas and other energy companies help the cause? Perhaps so. Some industrial and cyclical firms also shined brightly. Looking at IBD's industry groups, solar, oil machinery, oil drilling, oil and gas field services, building maintenance and agricultural chemical stocks jumped 2.4% or more for the day.  
 
 
-(See the [full daily performance at IBD Data Tables](https://www.investors.com/ibd-data-tables/).)  
-（请参阅 [IBD 数据表中的完整每日表现](https://www.investors.com/ibd-data-tables/)。
+(See the [full daily performance at IBD Data Tables](https://www.investors.com/ibd-data-tables/).)  
 
 
-Recent Institutional Selling近期机构抛售
-----------------------------------
+Recent Institutional Selling
+----------------------------
 
 
-Despite a slightly bearish tone to Monday's stock market, institutions didn't exactly flood the exits either.  
-尽管周一股市略显看跌，但机构也没有完全涌入退出市场。
+Despite a slightly bearish tone to Monday's stock market, institutions didn't exactly flood the exits either.  
 
 
-Volume fell 5% on the NYSE to 3.6 billion shares, while turnover cooled around 2% vs. the prior session to 5.76 billion shares on the Nasdaq. Therefore, [distribution](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) wasn't apparent. Nevertheless, the accompanying Market Pulse highlights an elevated level of intense professional selling.  
-纽约证券交易所的成交量下降 5% 至 36 亿股，而纳斯达克的成交量与前一交易日相比下降约 2%，至 57.6 亿股。因此，[分布](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)并不明显。尽管如此，随附的 Market Pulse 强调了高水平的激烈专业销售。
+Volume fell 5% on the NYSE to 3.6 billion shares, while turnover cooled around 2% vs. the prior session to 5.76 billion shares on the Nasdaq. Therefore, [distribution](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) wasn't apparent. Nevertheless, the accompanying Market Pulse highlights an elevated level of intense professional selling.  
 
 
-Indeed, when you consider the average decline among the S&P 500's distribution days is a pretty meaty 1.2% (down 1% on Oct. 7, 0.8% on Oct. 15, 0.9% on Oct. 23, and 1.9% on Oct. 31), it's certainly not time to become complacent about stock market behavior.  
-事实上，当您考虑到标准普尔 500 指数的发行日的平均跌幅为 1.2%（10 月 7 日下跌 1%，10 月 15 日下跌 0.8%，10 月 23 日下跌 0.9%，10 月 31 日下跌 1.9%）时，当然不是对股市行为自满的时候。
+Indeed, when you consider the average decline among the S&P 500's distribution days is a pretty meaty 1.2% (down 1% on Oct. 7, 0.8% on Oct. 15, 0.9% on Oct. 23, and 1.9% on Oct. 31), it's certainly not time to become complacent about stock market behavior.  
 
 
-Beyond The Market: Exercise Caution Here超越市场：在这里谨慎行事
-----------------------------------------------------
+Beyond The Market: Exercise Caution Here
+----------------------------------------
 
 
-In fact, volatility is showing a bigger bump higher.  
-事实上，波动性正在显示出更大的上升。
+In fact, volatility is showing a bigger bump higher.  
 
 
-The Cboe Market Volatility Index has gained ground in three of the past four sessions. On Monday, the VIX edged up 0.5% to 21.98. Relatively speaking, that's still a depressed level compared with its spikes in recent years. During the height of the Covid-19 pandemic bear market, the VIX exploded to as high as 85.47 in March 2020.  
-芝加哥期权交易所市场波动率指数在过去四个交易日中的三个交易日上涨。周一，VIX 小幅上涨 0.5% 至 21.98。相对而言，与近年来的峰值相比，这仍然是一个低迷的水平。在 Covid-19 大流行熊市的高峰期，VIX 在 2020 年 3 月飙升至 85.47 的高位。
+The Cboe Market Volatility Index has gained ground in three of the past four sessions. On Monday, the VIX edged up 0.5% to 21.98. Relatively speaking, that's still a depressed level compared with its spikes in recent years. During the height of the Covid-19 pandemic bear market, the VIX exploded to as high as 85.47 in March 2020.  
 
 
 Brett Friedman, a contributor at Winhall Risk Analytics and OptionMetrics, notes that pre-election implied volatility in S&P 500 options jumped by 6.8% during an average election year from 1996 through 2023 vs. a 1.8% drop during nonelection years. The study covered trading over 10 days prior to Nov. 5.  
 Winhall Risk Analytics 和 OptionMetrics 的撰稿人 Brett Friedman 指出，在 1996 年至 2023 年的平均选举年，标准普尔 500 指数期权的选前隐含波动率跃升了 6.8%，而非选举年则下跌了 1.8%。该研究涵盖了 11 月 5 日之前超过 10 天的交易。
 
 
-Friedman, who has built a career in financial risk management for more than three decades, has also found that since 1996, the stock market has tended to perform relatively better during non-election years from Nov. 6 through Dec. 31 than in election years. Specifically, Friedman shared this figures with IBD:  
-弗里德曼在金融风险管理领域建立了三十多年的职业生涯，他还发现，自 1996 年以来，股票市场在 11 月 6 日至 12 月 31 日的非选举年的表现往往比选举年要好。具体来说，弗里德曼与 IBD 分享了这些数据：
+Friedman, who has built a career in financial risk management for more than three decades, has also found that since 1996, the stock market has tended to perform relatively better during non-election years from Nov. 6 through Dec. 31 than in election years. Specifically, Friedman shared this figures with IBD:  
 
 
-* Post-Election Return (Nov. 6 to Dec. 31): average gain of 0.9% in election years vs. 1.8% gain in non-election years  
-选举后回报（11 月 6 日至 12 月 31 日）：选举年的平均涨幅为 0.9%，而非选举年的平均涨幅为 1.8%
-* Post-Election Return (Nov. 6 to Dec. 31): median gain of 1.4% in election years vs. 2.6% in non-election years  
-选举后回报（11 月 6 日至 12 月 31 日）：选举年的中位数增长为 1.4%，而非选举年的中位数为 2.6%
+* Post-Election Return (Nov. 6 to Dec. 31): average gain of 0.9% in election years vs. 1.8% gain in non-election years
+* Post-Election Return (Nov. 6 to Dec. 31): median gain of 1.4% in election years vs. 2.6% in non-election years
 
 
 "Some skepticism is merited," Friedman commented. "The comparison between election years and non-election years, whether in relation to return or implied volatility, is inconsistent and partially skewed by the extreme results recorded in 2008. The difference between average and median results reflects this."  
 “有些怀疑是值得的，”弗里德曼评论道。“选举年和非选举年之间的比较，无论是与回报还是隐含波动率有关，都是不一致的，并且部分被 2008 年记录的极端结果所扭曲。平均结果和中位数结果之间的差异反映了这一点。
 
 
-Friedman adds research how on the stock market behaves before and after elections should be taken with a large grain of salt. Why? Consider the risks of drawing conclusions from small sample sizes. He notes that since the introduction of the Dow Jones Industrial Average in 1896, America has had 33 presidential elections while his analysis above includes just seven White House contests. "The limited number of observations makes it difficult to draw firm, statistically valid conclusions, let alone to base trading strategies on the results," Friedman said.  
-弗里德曼补充说，对选举前后股市表现的研究应该持保留态度。 为什么？ 考虑从小样本量中得出结论的风险。他指出，自 1896 年引入道琼斯工业平均指数以来，美国已经举行了 33 次总统选举，而他上面的分析只包括了 7 次白宫竞选。“观察结果的数量有限，因此很难得出可靠的、统计上有效的结论，更不用说根据结果制定交易策略了，”弗里德曼说。
+Friedman adds research how on the stock market behaves before and after elections should be taken with a large grain of salt. Why? Consider the risks of drawing conclusions from small sample sizes. He notes that since the introduction of the Dow Jones Industrial Average in 1896, America has had 33 presidential elections while his analysis above includes just seven White House contests. "The limited number of observations makes it difficult to draw firm, statistically valid conclusions, let alone to base trading strategies on the results," Friedman said.  
 
 
-Three Sectors To Eye In The Stock Market股市值得关注的三个板块
----------------------------------------------------
+Three Sectors To Eye In The Stock Market
+----------------------------------------
 
 
-Meanwhile, three areas of the stock market showed poor action to warrant extra caution among active stock traders.  
-与此同时，股市的三个领域表现不佳，值得活跃的股票交易员格外小心。
+Meanwhile, three areas of the stock market showed poor action to warrant extra caution among active stock traders.  
 
 
-First, recent breakouts by small-cap growth stocks have not done particularly well.  
-首先，小盘成长股最近的突破表现并不是特别好。
+First, recent breakouts by small-cap growth stocks have not done particularly well.  
 
 
-Take **TG Therapeutics** ([TGTX](https://research.investors.com/quote.aspx?symbol=TGTX)). The small-cap biotech firm, which reported a 49% plunge in third-quarter sales Monday, nose-dived 9% in heavy turnover to 24.36. TG Therapeutics also dropped more than 7%, triggering a [defensive sell rule](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/), after breaking out of a narrow cup at 26.41 just one day ago.  
-以 **TG Therapeutics** （[TGTX）](https://research.investors.com/quote.aspx?symbol=TGTX) 为例。这家小盘生物技术公司周一报告称第三季度销售额暴跌 49%，成交量暴跌 9% 至 24.36。TG Therapeutics 在一天前突破 26.41 的窄杯后，也下跌了 7% 以上，触发了[防御性卖出规则](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/)。
+Take **TG Therapeutics** ([TGTX](https://research.investors.com/quote.aspx?symbol=TGTX)). The small-cap biotech firm, which reported a 49% plunge in third-quarter sales Monday, nose-dived 9% in heavy turnover to 24.36. TG Therapeutics also dropped more than 7%, triggering a [defensive sell rule](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/), after breaking out of a narrow cup at 26.41 just one day ago.  
 
 
-Weak Group Action 弱组操作
-----------------------
+Weak Group Action
+-----------------
 
 
-Second, some gold and silver miners took big hits.  
-其次，一些金矿和白银矿商遭受了重大打击。
+Second, some gold and silver miners took big hits.  
 
 
-**Idaho Strategic Resources** ([IDR](https://research.investors.com/quote.aspx?symbol=IDR)) collapsed despite a strong third-quarter report (EPS up 400%, revenue up 86%). The microcap fell more than 15% to 13.39 in more than double its usual turnover and undercut its rising 50-day line. The stock in August broke out of a [well-formed base](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-growth-stocks-positive-elements-of-a-base/) with an 11.80 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) and climbed as much as 55%.  
-尽管第三季度报告强劲（每股收益增长 400%，收入增长 86%），**但 Idaho Strategic Resources** （[IDR）](https://research.investors.com/quote.aspx?symbol=IDR) 仍股价暴跌。微型股下跌超过 15% 至 13.39，成交额是平时的两倍多，并低于其不断上涨的 50 天线。该股在 8 月份突破了 11.80 [买入点](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/)的良好[基础](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-growth-stocks-positive-elements-of-a-base/)，并上涨了 55%。
+**Idaho Strategic Resources** ([IDR](https://research.investors.com/quote.aspx?symbol=IDR)) collapsed despite a strong third-quarter report (EPS up 400%, revenue up 86%). The microcap fell more than 15% to 13.39 in more than double its usual turnover and undercut its rising 50-day line. The stock in August broke out of a [well-formed base](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-growth-stocks-positive-elements-of-a-base/) with an 11.80 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) and climbed as much as 55%.  
 
 
-Gold itself continues to move steadily higher. But in the gold and silver mining group, **Barrick Gold** ([GOLD](https://research.investors.com/quote.aspx?symbol=GOLD)) and **Newmont** ([NEM](https://research.investors.com/quote.aspx?symbol=NEM)) have also pierced their 50-day moving averages, a bearish sign in the near term.  
-黄金本身继续稳步走高。但在黄金和白银矿业集团中，**巴里克黄金** （[GOLD）](https://research.investors.com/quote.aspx?symbol=GOLD) 和**纽蒙特** （[NEM](https://research.investors.com/quote.aspx?symbol=NEM)） 也突破了 50 天移动平均线，这在短期内是一个看跌信号。
+Gold itself continues to move steadily higher. But in the gold and silver mining group, **Barrick Gold** ([GOLD](https://research.investors.com/quote.aspx?symbol=GOLD)) and **Newmont** ([NEM](https://research.investors.com/quote.aspx?symbol=NEM)) have also pierced their 50-day moving averages, a bearish sign in the near term.  
 
 
-Finally, amid news that it could get more difficult for data centers to extract power from the nation's nuclear power plants to fuel their operations, utility stocks tanked. For months, Utilities Select SPDR Sector ([XLU](https://research.investors.com/quote.aspx?symbol=XLU)) acted like a [stock market leader](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/). But on Monday, the ETF dropped further below its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/) with a 1.2% slide in heavy trading.  
-最后，有消息称数据中心可能更难从该国的核电站中提取电力来为其运营提供燃料，公用事业股暴跌。几个月来，Utilities Select SPDR Sector （[XLU](https://research.investors.com/quote.aspx?symbol=XLU)） 就像[股市的领导者](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)一样。但在周一，该 ETF 进一步跌破其 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/)，在大量交易中下跌 1.2%。
+Finally, amid news that it could get more difficult for data centers to extract power from the nation's nuclear power plants to fuel their operations, utility stocks tanked. For months, Utilities Select SPDR Sector ([XLU](https://research.investors.com/quote.aspx?symbol=XLU)) acted like a [stock market leader](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/). But on Monday, the ETF dropped further below its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/) with a 1.2% slide in heavy trading.  
 
 
-That action triggered a [profit-taking sell rule](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-stocks-big-break-below-50-day-line-can-mark-end-of-a-huge-run/). The [ETF exited Leaderboard](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint) on Monday. It also fell for the eighth time in 11 sessions.  
-该操作触发了[获利回吐卖出规则](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-stocks-big-break-below-50-day-line-can-mark-end-of-a-huge-run/)。该 [ETF 周一退出排行榜](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint)。它也在 11 个交易日中第 8 次下跌。
+That action triggered a [profit-taking sell rule](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-stocks-big-break-below-50-day-line-can-mark-end-of-a-huge-run/). The [ETF exited Leaderboard](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint) on Monday. It also fell for the eighth time in 11 sessions.  
 
 
-[View the General Market Indicators chart page here.  
-在此处查看 General Market Indicators 图表页面。](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_110424.pdf)
+[View the General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_110424.pdf) 
 
 
-*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)  
-*请在 X/Twitter 上关注 Chung：*[*@saitochung*](https://twitter.com/SaitoChung) *和* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)  
 
 
-**YOU MIGHT ALSO LIKE: 您可能还喜欢：**
+**YOU MIGHT ALSO LIKE:** 
 
 
-[The Latest IBD Podcast 最新的 IBD 播客](https://get.investors.com/podcast/?src=A00511A)
+[The Latest IBD Podcast](https://get.investors.com/podcast/?src=A00511A) 
 
 
-[How To Find Winning Growth Stocks: Search These Lists First  
-如何找到获胜的成长型股票：首先搜索这些列表](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[How To Find Winning Growth Stocks: Search These Lists First](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/) 
 
 
-[Investor's Corner: How To Use The RS Line Blue Dot Indicator  
-投资者专区：如何使用 RS Line 蓝点指标](https://www.investors.com/stock-lists/ibd-50/winning-stocks-and-bullish-blue-dots/)
+[Investor's Corner: How To Use The RS Line Blue Dot Indicator](https://www.investors.com/stock-lists/ibd-50/winning-stocks-and-bullish-blue-dots/) 
 
 
-[Want To Learn How To Pick Great Stocks? Read Investor's Corner  
-想学习如何挑选优质股票吗？阅读投资者专区](https://www.investors.com/category/how-to-invest/investors-corner/)
+[Want To Learn How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/) 
 
 
-[The Latest In IBD Videos](https://www.investors.com/ibd-videos)
+[The Latest In IBD Videos](https://www.investors.com/ibd-videos) 
 
 
 
